# chip8

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clang-build.sh
sounds/: encoded_sound.txt
src/: CMakeLists.txt  chip8.cpp  chip8.h  main.cpp
src/base64/: base64.cpp  base64.h
src/chip8/: chip8.cpp  chip8.h
src/chip8_emulator/: chip8.cpp  chip8.h  chip8_emulator.h
src/chip8_emulator/chip8-core/: chip8.cpp  chip8.h
src/chip8_emulator/chip8-displayAndKeyboard/: displayAndKeyboard.cpp
src/chip8_emulator/chip8-timers/: timers.cpp
src/chip8_emulator/read_from_file/: read_from_file.cpp  read_from_file.h
src/chip8_emulator/sound/: base64decode_sound.cpp  base64decode_sound.h  base64encode_sound.cpp  encoded_sound.h  encoded_sound.inl  sound.cpp  sound.h
src/display/: display.cpp  display.h  main_display.cpp
src/displayAndKeyboard/: displayAndKeyboard.cpp  displayAndKeyboard.h
src/sound/: sound.cpp
src/timers/: timers.cpp  timers.h
tests/: test.cpp
